# Penguin-warrior

./: .gitignore  Makefile  Makefile.in  README  README.md  TODO  config.h  config.h.in~  config.status  configure  configure.ac  pw.gyp
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.bak  audio.c  background.c  fighter  font5x5.h  gamedefs.h  main.c  music.c  network.c  network.h  opponent.lua  opponent.scm  particle.c  pw.tcl  radar.c  radar.h  resources.c  scripting.c  scripting.h  status.c  weapon.c
